# prometheus-rust-example

./: README.md  docker-compose.yaml  prometheus.yaml
monitoring-api/: Cargo.toml  Dockerfile
monitoring-api/src/: main.rs
