[package]
name = "monitoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
metrics = { version = "0.24.1", default-features = false}
metrics-exporter-prometheus = {version = "0.16.0", default-features = false}
metrics-process = "2.4.0"
sysinfo = "0.33.0"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
